--- a/project_view_history.html
+++ b/project_view_history.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="project-description">
 				<p>When we read an article on Wikipedia, we tend to consider the page as a static document rather than a collection of evolving information.  We don’t often read the same article multiple times, looking for how the information has changed since our last visit.  Even though the revision history for an article is publicly available from our browsers, that history is effectively invisible to readers.</p>
-				<p>[View History] reveals the evolution of the "Global warming" Wikipedia article in two ways: through the chronology of changes to the article and through the discussions between editors.</p>
+				<p>[View History] reveals the evolution a controversial Wikipedia article - "Global Warming" - article in two ways: through the chronology of changes to the article and through the discussions between editors.</p>
 			</div>
 			<section class="col-1-2 left">
 				<a href="./assets/images/projects/view_history/SAICCrowd1.jpg"><img src="./assets/images/projects/view_history/SAICCrowd1Thumbnail.jpg"></a>
@@ -45,7 +45,7 @@
 				<a href="./assets/images/projects/view_history/SAICCleanShot.jpg"><img src="./assets/images/projects/view_history/SAICCleanShotCroppedThumbnail.jpg"></a>
 			</section>
 			<div class="continued-project-description">
-				<p>On the left, overlaid sheets of acrylic show the chronological development of the content of the “Global warming” article from 2007 to 2014. The introductory paragraph and the table of contents were analyzed, and the origin of each word was dated.  Each word was then placed into a stack of acrylic sheets.  Each sheet represented one year, and the older the word was, the farther back into the stack it was placed.</p>
+				<p>On the left side of the installation, overlaid sheets of acrylic show the chronological development of the content of the “Global Warming” article from 2007 to 2014. The introductory paragraph and the table of contents were analyzed, and the origin of each word was dated.  Each word was then placed into a stack of acrylic sheets.  Each sheet represented one year, and the older the word was, the farther back into the stack it was placed.</p>
 			</div>
 			<section class="col-1-2 left">
 				<a href="./assets/images/projects/view_history/ChronologySideView.jpg"><img src="./assets/images/projects/view_history/ChronologySideViewCroppedThumbnail.jpg"></a>
@@ -60,7 +60,7 @@
 				<a href="./assets/images/projects/view_history/ChronologyCloseUpContents.jpg"><img src="./assets/images/projects/view_history/ChronologyCloseUpContentsCroppedThumbnail.jpg"></a>
 			</section>
 			<div class="continued-project-description">
-				<p>In the center, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global warming” article was being written. “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
+				<p>In the center of the installation, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global Warming” article was being written. “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
 			</div>
 			<section class="col-1-2 left">
 				<a href="./assets/images/projects/view_history/SAICCloseCrowd.jpg"><img src="./assets/images/projects/view_history/SAICCloseCrowdCroppedThumbnail.jpg"></a>
@@ -78,7 +78,7 @@
 				<a href="./assets/images/projects/view_history/Books.jpg"><img src="./assets/images/projects/view_history/BooksCroppedThumbnail.jpg"></a>
 			</section>
 			<div class="continued-project-description">
-				<p>On the right, the three books fit into place on top of the text of the Wikipedia article, pulled from the “Discourse about global warming” section.  The covers and titles of the books are excerpts from this section of the article.</p>
+				<p>On the right side of the installation, the three books fit into place on top of the text of the Wikipedia article, pulled from the “Discourse about global warming” section.  The covers and titles of the books are excerpts from this section of the article.</p>
 			</div>
 			<section class="col-1-2 left">
 				<a href="./assets/images/projects/view_history/GettingBookFromHolder.jpg"><img src="./assets/images/projects/view_history/GettingBookFromHolderCroppedThumbnail.jpg"></a>
