--- a/project_view_history.html
+++ b/project_view_history.html
@@ -29,8 +29,8 @@
 				<span class="title">[View History] (2014)</span>
 			</div>
 			<div class="project-description">
-				<p>When we read an article on Wikipedia, we tend to consider the page as a static document rather than a collection of evolving information.  We don’t often read the same article multiple times, looking for how the information has changed since our last visit.  Even though the revision history for an article is publicly available from our browsers, that history is effectively invisible to readers.</p>
 				<p>[View History] reveals the evolution a controversial Wikipedia article - "Global Warming" - article in two ways: through the chronology of changes to the article and through the discussions between editors.</p>
+				<p>When we read an article on Wikipedia, we tend to consider the page as a static document rather than a collection of evolving information.  We don’t often read the same article multiple times, looking for how the information has changed since our last visit.  Even though the revision history for an article is publicly available from our browsers, that history is effectively invisible to readers. [View History] is an exploration of that hidden history and asks whether it should be hidden from the reader.</p>
 			</div>
 			<section class="col-1-2 left">
 				<a href="./assets/images/projects/view_history/SAICCrowd1.jpg"><img src="./assets/images/projects/view_history/SAICCrowd1Thumbnail.jpg"></a>
@@ -38,11 +38,11 @@
 			--><section class="col-1-2 right">
 				<a href="./assets/images/projects/view_history/SAICCrowd2.jpg"><img src="./assets/images/projects/view_history/SAICCrowd2CroppedThumbnail.jpg"></a>
 			</section><!--
-			--><section class="col-1-2 left">
-				<a href="./assets/images/projects/view_history/SAICGroupShot.jpg"><img src="./assets/images/projects/view_history/SAICGroupShotCroppedThumbnail.jpg"></a>
-			</section><!--
-			--><section class="col-1-2 right">
+			--><section class="col-1-2 left">				
 				<a href="./assets/images/projects/view_history/SAICCleanShot.jpg"><img src="./assets/images/projects/view_history/SAICCleanShotCroppedThumbnail.jpg"></a>
+			</section><!--
+			--><section class="col-1-2 right">			
+				<a href="./assets/images/projects/view_history/SAICOutsideShot.jpg"><img src="./assets/images/projects/view_history/SAICOutsideShotCroppedThumbnail.jpg"></a>
 			</section>
 			<div class="continued-project-description">
 				<p>On the left side of the installation, overlaid sheets of acrylic show the chronological development of the content of the “Global Warming” article from 2007 to 2014. The introductory paragraph and the table of contents were analyzed, and the origin of each word was dated.  Each word was then placed into a stack of acrylic sheets.  Each sheet represented one year, and the older the word was, the farther back into the stack it was placed.</p>
@@ -60,7 +60,7 @@
 				<a href="./assets/images/projects/view_history/ChronologyCloseUpContents.jpg"><img src="./assets/images/projects/view_history/ChronologyCloseUpContentsCroppedThumbnail.jpg"></a>
 			</section>
 			<div class="continued-project-description">
-				<p>In the center of the installation, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global Warming” article was being written. “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
+				<p>In the center of the installation, three books – “Some people dispute,” “wording choice” and “consensus view” – record the debates and comments among individuals as the “Global Warming” article evolved. “Some people dispute” collects controversial edits surrounding a particularly strongly opinionated individual, “wording choice” examines how language choices reflect biases and “consensus view” looks at how majority and minority views get represented in Wikipedia.</p>
 			</div>
 			<section class="col-1-2 left">
 				<a href="./assets/images/projects/view_history/SAICCloseCrowd.jpg"><img src="./assets/images/projects/view_history/SAICCloseCrowdCroppedThumbnail.jpg"></a>
@@ -96,7 +96,7 @@
 				<p>[View History] was created in collaboration with Sid Benteftifa, Olivia Ching, Meghan Ryan Morris, Steph Shapiro, Julia Torres and Brandon Williams. It was installed for the Data Viz Collaborative show at the Leroy Neiman Center at the School of the Art Institute of Chicago from 12/05/2014 to 12/15/2014 and in the sister show in the Ford building at Northwestern University from 01/20/2015 to 02/20/2015.</p>
 			</div>
 			<section class="col-1-2 center">
-				<a href="./assets/images/projects/view_history/SAICOutsideShot.jpg"><img src="./assets/images/projects/view_history/SAICOutsideShotCroppedThumbnail.jpg"></a>
+				<a href="./assets/images/projects/view_history/SAICGroupShot.jpg"><img src="./assets/images/projects/view_history/SAICGroupShotCroppedThumbnail.jpg"></a>
 			</section>
 		</section>
 	</section>
