Updated ofBook page

--- a/teaching_introduction_to_graphics.html
+++ b/teaching_introduction_to_graphics.html
@@ -31,7 +31,7 @@
 			<div class="project-description">
 				<p><a href="http://openframeworks.cc/">openFrameworks</a> is an open source C++ toolkit to make creating things with code easier.   ofBook is a community-sourced book covering the expanse of things you can do with openFrameworks: from animation to iOS applications to game design.</p>  
 				<p>I wrote Chapter 4, "Introduction to Graphics."  It is a chapter aimed at beginners who have read the preceding chapters, which cover how to create an openFrameworks application and the basics of C++ programming.  My chapter walks the reader through the world of 2D graphics by creating complex forms from repeated, simple shapes.</p>
-				<p>The completed book will be published (in print and to the web) within a month, but for now, the unformatted version of my chapter can be seen <a href="https://github.com/openframeworks/ofBook/blob/master/04_intro_to_graphics/chapter.md">here</a>.</p>
+				<p>The completed book will be published (in print and to the web) very soon, but for now, the unformatted version of my chapter can be seen <a href="https://github.com/openframeworks/ofBook/blob/master/chapters/intro_to_graphics/chapter.md">here</a>.</p>
 			</div>
 		</section>
 		<section class="col-1-2 left">
@@ -39,6 +39,9 @@
 		</section><!--
 		--><section class="col-1-2 right">
 			<a href="./assets/images/teaching/ofBook/rotating.png"><img src="./assets/images/teaching/ofBook/rotatingThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 center">
+			<a href="./assets/images/teaching/ofBook/Figure17_EditingVectorGraphics.png"><img src="./assets/images/teaching/ofBook/Figure17_EditingVectorGraphicsThumbnail.jpg"></a>
 		</section>
 	</section>
 
