Updating teaching resume

--- a/teaching_convergence.html
+++ b/teaching_convergence.html
@@ -16,7 +16,7 @@
 		<nav class="nav primary-nav">
 			<ul>
 				<li><a href="projects.html">Projects</a></li><!--
-				--><li class="active-nav-item"><a href="teaching.html">Teaching</a></li><!--
+				--><li><a href="teaching.html">Teaching</a></li><!--
 				--><li><a href ="blog.html">Blog</a></li><!--
 				--><li><a href="me.html">Me</a></li>
 			</ul>
@@ -24,40 +24,14 @@
 	</header>
 
 	<section class="container body">
-		<div class="img-grid">
-			<div class="img-grid-elem">
-				<a href="teaching_game_design.html">
-					<figure>
-						<img src="./assets/images/teaching/GameDesign_TestThumbnail.jpg">
-						<figcaption>High School Art + Technology (now)</figcaption>
-					</figure>
-				</a>
-			</div><!--
-			--><div class="img-grid-elem">
-				<a href="teaching_game_design.html">
-					<figure>
-						<img src="./assets/images/teaching/GameDesign/progress5Thumbnail.jpg">
-						<figcaption>Middle School Game Design (2014)</figcaption>
-					</figure>
-				</a>
-			</div><!--
-			--><div class="img-grid-elem">
-				<a href="teaching_introduction_to_graphics.html">
-					<figure>
-						<img src="./assets/images/teaching/ofBook/tangentsThumbnail.jpg">
-						<figcaption>Introduction to Graphics (2014)</figcaption>
-					</figure>
-				</a>
-			</div><!--
-			--><div class="img-grid-elem">
-				<a href="teaching_generative_meshes.html">
-					<figure>
-						<img src="./assets/images/teaching/generative_meshes/meshThumbnail.jpg">
-						<figcaption>Generative Meshes (2013)</figcaption>
-					</figure>
-				</a>
+		<section class="col-center">
+			<div class="project-header">
+				<span class="title">High School Art + Technology (now)</span>
 			</div>
-		</div>
+			<div class="project-description">
+				<p>(under construction)</p>
+				<p>I am currently working with <a href="http://convergenceacademies.org/">Convergence Academies</a> to help integrate art and technology into the core curriculum of a high school in Chicago.  I work closely with teachers to help them plan, implement and teach new course material - e.g. physical game design in PE and robotics as a way to teach electricity in physics.</p>
+			</div>			
 	</section>
 
 	<footer class="primary-footer container group">
@@ -74,4 +48,3 @@
 </body>
 
 </html>
-
