--- a/teaching.html
+++ b/teaching.html
@@ -26,7 +26,7 @@
 	<section class="container body">
 		<div class="img-grid">
 			<div class="img-grid-elem">
-				<a href="teaching_game_design.html">
+				<a href="teaching_convergence.html">
 					<figure>
 						<img src="./assets/images/teaching/GameDesign_TestThumbnail.jpg">
 						<figcaption>High School Art + Technology (now)</figcaption>
