--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
 				</a>
 			</div><!--
 			--><div class="img-grid-elem">
-				<a href="project_gratuitous_gram.html">
+				<a href="https://gratuitousgram.wordpress.com/">
 					<figure>
 						<img src="./assets/images/projects/gratuitous_gram/cover_pictureThumbnail.jpg">
 						<figcaption>The Gratuitous Gram (2014)</figcaption>
