Added standin page for promise foods

--- a/project_food.html
+++ b/project_food.html
@@ -26,11 +26,15 @@
 	<section class="container body">
 		<section class="col-center">
 			<div class="project-header">
-				<span class="title">speculative food (now)</span>
+				<span class="title">Promise Foods (2015)</span>
 			</div>
 			<div class="project-description">
+				<p>MFA Thesis at SAIC</p>
 				<p>(page under construction)</p>
 			</div>
+		</section>
+		<section class="col-1-2 center">
+			<a href="./assets/images/projects/food/untitled0.png"><img src="./assets/images/projects/food/untitled0Thumbnail.jpg"></a>
 		</section>
 	</section>
 
