--- a/projects.html
+++ b/projects.html
@@ -28,8 +28,8 @@
 			<div class="img-grid-elem">
 				<a href="project_food.html">
 					<figure>
-						<img src="./assets/images/projects/food/labelsThumbnail.jpg">
-						<figcaption>Speculative Food (now)</figcaption>
+						<img src="./assets/images/projects/food/untitled0Thumbnail.jpg">
+						<figcaption>Promise Foods (2015)</figcaption>
 					</figure>
 				</a>
 			</div><!--
