adding promise foods page

--- a/project_food.html
+++ b/project_food.html
@@ -29,12 +29,30 @@
 				<span class="title">Promise Foods (2015)</span>
 			</div>
 			<div class="project-description">
-				<p>MFA Thesis at SAIC</p>
-				<p>(page under construction)</p>
+				<p>Promise Foods Booth at SAIC MFA Show</p>
+				<p>We unveiled our first product - the Promise Apple!  The first organically grown apple to be engineered to have a natural dose caffeine.</p>
 			</div>
 		</section>
 		<section class="col-1-2 center">
-			<a href="./assets/images/projects/food/untitled0.png"><img src="./assets/images/projects/food/untitled0Thumbnail.jpg"></a>
+			<a href="./assets/images/projects/food/IMG_9986.jpg"><img src="./assets/images/projects/food/IMG_9986CroppedThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 left">				
+			<a href="./assets/images/projects/food/IMG_9976.jpg"><img src="./assets/images/projects/food/IMG_9976CroppedThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 right">			
+			<a href="./assets/images/projects/food/IMG_9767.jpg"><img src="./assets/images/projects/food/IMG_9767CroppedThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 left">				
+			<a href="./assets/images/projects/food/IMG_9663.jpg"><img src="./assets/images/projects/food/IMG_9663CroppedThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 right">			
+			<a href="./assets/images/projects/food/IMG_9941.jpg"><img src="./assets/images/projects/food/IMG_9941CroppedThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 left">				
+			<a href="./assets/images/projects/food/IMG_9694.jpg"><img src="./assets/images/projects/food/IMG_9694CroppedThumbnail.jpg"></a>
+		</section><!--
+		--><section class="col-1-2 right">			
+			<a href="./assets/images/projects/food/IMG_9692.jpg"><img src="./assets/images/projects/food/IMG_9692CroppedThumbnail.jpg"></a>
 		</section>
 	</section>
 
