Ugh. Sed to remove protocol from links (site needs a facelift)

--- a/project_augmented_interface.html
+++ b/project_augmented_interface.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -31,8 +31,8 @@
 			</div>
 			<div class="project-description">
 				<p>This was an experiment in augmented interfaces for game spaces.  In addition to a keyboard and mouse, players also use two physical LEDs as controls in the game space.</p>
-				<p>The game is built using the <a href="http://unity3d.com/">Unity game engine</a>, <a href="http://openframeworks.cc/">openFrameworks C++ toolkit</a> and an <a href="http://www.arduino.cc/">Ardiuno</a> board with two LEDs.<p>
-				<p>The video below shows the installation running.  For the purposes of sharing, there is also a version of the game that does not require Arduinos and LEDs below, playable online <a href="http://dl.dropboxusercontent.com/u/32721130/flood_no_arduino_web/flood_no_arduino_web.html">here</a>.</p>
+				<p>The game is built using the <a href="//unity3d.com/">Unity game engine</a>, <a href="//openframeworks.cc/">openFrameworks C++ toolkit</a> and an <a href="//www.arduino.cc/">Ardiuno</a> board with two LEDs.<p>
+				<p>The video below shows the installation running.  For the purposes of sharing, there is also a version of the game that does not require Arduinos and LEDs below, playable online <a href="//dl.dropboxusercontent.com/u/32721130/flood_no_arduino_web/flood_no_arduino_web.html">here</a>.</p>
 			</div>
 		</section>
 		<section class="col-1-2 left">
@@ -47,7 +47,7 @@
 		--><section class="col-1-2 right">
 			<a href="./assets/images/projects/augmented_interface/green_end.png"><img src="./assets/images/projects/augmented_interface/green_endThumbnail.jpg"></a>
 		</section>
-		<iframe class="col-1-2 center" src="http://player.vimeo.com/video/76393579?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe class="col-1-2 center" src="//player.vimeo.com/video/76393579?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</section>
 
 	<footer class="primary-footer container group">
@@ -55,9 +55,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
