--- a/project_convergence.html
+++ b/project_convergence.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 			</div>
 			<div class="project-description">
 				<p>Convergence was a collaboration with Sean Li and Ray Chen.  It is an examination of choice over the course of a life.</p>  
-				<p>It is a flash game built with the <a href="http://flixel.org/">Flixel</a> library.  A playable version is hosted online <a href="http://www.kongregate.com/games/Talon88/convergence">here</a>.  The left and right arrow keys control movement, while the space bar controls interactions.</p>
+				<p>It is a flash game built with the <a href="//flixel.org/">Flixel</a> library.  A playable version is hosted online <a href="//www.kongregate.com/games/Talon88/convergence">here</a>.  The left and right arrow keys control movement, while the space bar controls interactions.</p>
 			</div>
 		</section>
 		<section class="col-1-2 center">
@@ -43,9 +43,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
