--- a/project_gratuitous_gram.html
+++ b/project_gratuitous_gram.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 				<span class="title">The Gratuitous Gram (2014)</span>
 			</div>
 			<div class="project-description">
-				<p>The Gratuitous Gram is an interactive food tent installation, produced in collaboration with a biologist from Lafayette College, Elaine Reynolds.  The website for the piece is <a href="http://www.thegratuitousgram.com/">thegratuitousgram.com</a>.</p>
+				<p>The Gratuitous Gram is an interactive food tent installation, produced in collaboration with a biologist from Lafayette College, Elaine Reynolds.  The website for the piece is <a href="//www.thegratuitousgram.com/">thegratuitousgram.com</a>.</p>
 				<p>In the installation, we reconstructed iconic meals using the nutrition label as a recipe – plating out piles of shortening for fats, sugar for carbohydrates and protein powder for protein.  While technically edible, the result would never be mistaken for the real dish. Why then does the nutrition label act as the basis for our understanding of health and food?</p>
 				<p>It was shown in the Easton Farmers Market on July 12th, 2014.  Selected documentation shown below.  The tent was divided up into two sections – one with a display case with dishes we made and the other with a public table where visitors made their own dishes.  In the display case, protein, fats and carbs were plated in ramekins and ornamented with various real foods.  On the public table, visitors could construct a dish from a set of printed nutrition labels and decorate it with assorted sauces.</p>
 			</div>
@@ -71,9 +71,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
