--- a/project_growing_cells.html
+++ b/project_growing_cells.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -30,8 +30,8 @@
 			</div>
 			<div class="project-description">
 				<p>While I was training as neuroscientist, I was fascinated by the way simple cells operating under simple rules can create complexity.  These two projects were an attempt to take simple rules and use them to grow something complex.</p>
-				<p>In the first series (first row), I wrote <a href="https://www.python.org/">Python</a> scripts that generated branching forms in <a href="http://www.povray.org/">POV-Ray</a>, a ray tracing 3D graphics package.</p>
-				<p>In the second series (second and third row), I grew networks of branching cells by writing <a href="https://www.python.org/">Python</a> scripts in <a href="http://www.blender.org/">Blender</a>, a 3D graphics modeling tool.  The network of cells was then used to cast shadows on a wall.  The second row shows a shadow cast by a single light and a single cell.  The third row shows the shadows cast by networks of cells with multiple, colored lights.</p>
+				<p>In the first series (first row), I wrote <a href="https://www.python.org/">Python</a> scripts that generated branching forms in <a href="//www.povray.org/">POV-Ray</a>, a ray tracing 3D graphics package.</p>
+				<p>In the second series (second and third row), I grew networks of branching cells by writing <a href="https://www.python.org/">Python</a> scripts in <a href="//www.blender.org/">Blender</a>, a 3D graphics modeling tool.  The network of cells was then used to cast shadows on a wall.  The second row shows a shadow cast by a single light and a single cell.  The third row shows the shadows cast by networks of cells with multiple, colored lights.</p>
 			</div>
 		</section>
 		<section class="col-1-2 left">
@@ -56,9 +56,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
