--- a/project_memory_sketches.html
+++ b/project_memory_sketches.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 				<span class="title">Memory Sketches (2013)</span>
 			</div>
 			<div class="project-description">
-				<p>Below are a series of snapshots from first person, game spaces built in the <a href="http://unity3d.com/">Unity game engine</a>.</p>  
+				<p>Below are a series of snapshots from first person, game spaces built in the <a href="//unity3d.com/">Unity game engine</a>.</p>  
 				<p>They are sketches from experiments in creating representations of internal worlds. I was making fragmented spaces for memories to live.</p>
 			</div>
 		</section>
@@ -49,9 +49,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
