--- a/teaching_generative_meshes.html
+++ b/teaching_generative_meshes.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 				<span class="title">Generative Meshes (2013)</span>
 			</div>
 			<div class="project-description">
-				<p><a href="http://openframeworks.cc/">openFrameworks</a> is an open source C++ toolkit to make creating things with code easier.   I wrote a tutorial, hosted on the openFrameworks site <a href="http://openframeworks.cc/tutorials/graphics/generativemesh.html">here</a>, on the basics of using code to generate 3D shapes.  It is aimed at beginners: those who understand variables, loops and how to create projects in openFrameworks.</p>  
+				<p><a href="//openframeworks.cc/">openFrameworks</a> is an open source C++ toolkit to make creating things with code easier.   I wrote a tutorial, hosted on the openFrameworks site <a href="//openframeworks.cc/tutorials/graphics/generativemesh.html">here</a>, on the basics of using code to generate 3D shapes.  It is aimed at beginners: those who understand variables, loops and how to create projects in openFrameworks.</p>  
 				<p>The lesson walks through what a 3D object is in code; how you can take an image and use it to generate a 3D object; and then once you've generated a 3D object, what can you do with it.  It starts with an image from the Hubble telescope (left) and ends with turning it into a 3D object (right) that can then be animated and manipulated.</p>
 			</div>
 		</section>
@@ -46,9 +46,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
