--- a/teaching_introduction_to_graphics.html
+++ b/teaching_introduction_to_graphics.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 				<span class="title">Introduction to Graphics (now)</span>
 			</div>
 			<div class="project-description">
-				<p><a href="http://openframeworks.cc/">openFrameworks</a> is an open source C++ toolkit to make creating things with code easier.   ofBook is a community-sourced book covering the expanse of things you can do with openFrameworks: from animation to iOS applications to game design.</p>  
+				<p><a href="//openframeworks.cc/">openFrameworks</a> is an open source C++ toolkit to make creating things with code easier.   ofBook is a community-sourced book covering the expanse of things you can do with openFrameworks: from animation to iOS applications to game design.</p>  
 				<p>I wrote Chapter 4, "Introduction to Graphics."  It is a chapter aimed at beginners who have read the preceding chapters, which cover how to create an openFrameworks application and the basics of C++ programming.  My chapter walks the reader through the world of 2D graphics by creating complex forms from repeated, simple shapes.</p>
 				<p>The completed book will be published (in print and to the web) very soon, but for now, the unformatted version of my chapter can be seen <a href="https://github.com/openframeworks/ofBook/blob/master/chapters/intro_to_graphics/chapter.md">here</a>.</p>
 			</div>
@@ -50,9 +50,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
