--- a/project_frame.html
+++ b/project_frame.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 			</div>
 			<div class="project-description">
 				<p>Similar to the <a href="project_memory_sketches.html">Memory Sketches</a>, this first person game world is about the elusiveness of memory.</p>  
-				<p>It is built in <a href="http://unity3d.com/">Unity game engine</a>.  A playable version is hosted online <a href="https://dl.dropboxusercontent.com/u/32721130/Frame_Web_Build/Web%20Build.html">here</a>.  The W, A, S and D keys control movement, while the mouse controls where you are looking.</p>
+				<p>It is built in <a href="//unity3d.com/">Unity game engine</a>.  A playable version is hosted online <a href="https://dl.dropboxusercontent.com/u/32721130/Frame_Web_Build/Web%20Build.html">here</a>.  The W, A, S and D keys control movement, while the mouse controls where you are looking.</p>
 			</div>
 		</section>
 		<section class="col-1-2 center">
@@ -43,9 +43,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
