--- a/project_games_as_missives.html
+++ b/project_games_as_missives.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">	
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -30,9 +30,9 @@
 			</div>
 			<div class="project-description">
 				<p>These two projects, Nascent (left) and Untitled (right), are games intended as missives to family and friends.  Games are a form of communication.</p>  
-				<p>Nascent, a flash game built with the <a href="http://flixel.org/">Flixel</a> library, was a letter to my parents.  It is hosted online <a href="http://www.kongregate.com/games/mike_west/nascent">here</a>.  It is a two-player game: one player controls the female avatar with A, D and space keys, while the other player controls the male avatar with the left, right and enter keys.</p>
+				<p>Nascent, a flash game built with the <a href="//flixel.org/">Flixel</a> library, was a letter to my parents.  It is hosted online <a href="//www.kongregate.com/games/mike_west/nascent">here</a>.  It is a two-player game: one player controls the female avatar with A, D and space keys, while the other player controls the male avatar with the left, right and enter keys.</p>
 			</div>
-				<p>Untitled was a game build with the <a href="http://unity3d.com/">Unity game engine</a>.  It is playable online <a href="http://dl.dropboxusercontent.com/u/32721130/Untitled%20Card/Untitled%20Card.html">here</a>.  The player explores a world without being able to see the whole world at once, like a rat in a maze.</p>
+				<p>Untitled was a game build with the <a href="//unity3d.com/">Unity game engine</a>.  It is playable online <a href="//dl.dropboxusercontent.com/u/32721130/Untitled%20Card/Untitled%20Card.html">here</a>.  The player explores a world without being able to see the whole world at once, like a rat in a maze.</p>
 		</section>
 		<section class="col-1-2 left">
 			<a href="./assets/images/projects/games_as_missives/nascent.png"><img src="./assets/images/projects/games_as_missives/nascentThumbnail.jpg"></a>
@@ -47,9 +47,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
