--- a/project_natural_symmetries.html
+++ b/project_natural_symmetries.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
 				<span class="title">Natural Symmetries (2013)</span>
 			</div>
 			<div class="project-description">
-				<p>A project to take images of the outside and turn them into geometric mandalas, using custom software in C++ using the openFrameworks library.  For source material, I used <a href="http://www.flickr.com/photos/34022876@N06/3434623631/">"HDR Sunset, Costa Rica"</a> and <a href="http://www.flickr.com/photos/90509736@N05/8552198245/in/photolist-e2JfzT">"HDR"</a> from flickr.
+				<p>A project to take images of the outside and turn them into geometric mandalas, using custom software in C++ using the openFrameworks library.  For source material, I used <a href="//www.flickr.com/photos/34022876@N06/3434623631/">"HDR Sunset, Costa Rica"</a> and <a href="//www.flickr.com/photos/90509736@N05/8552198245/in/photolist-e2JfzT">"HDR"</a> from flickr.
 			</div>
 		</section>
 		<section class="col-1-2 left">
@@ -56,7 +56,7 @@
 		--><section class="col-1-2 right">
 			<a href="./assets/images/projects/natural_symmetries/717.png"><img src="./assets/images/projects/natural_symmetries/717Thumbnail.jpg"></a>
 		</section>
-		<iframe class="col-1-2 center" src="http://player.vimeo.com/video/75174494?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+		<iframe class="col-1-2 center" src="//player.vimeo.com/video/75174494?portrait=0" width="475" height="267" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</section>
 
 	<footer class="primary-footer container group">
@@ -64,9 +64,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
