--- a/teaching_convergence.html
+++ b/teaching_convergence.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<title>mikewesthad</title>
 	<link rel="stylesheet" href="assets/stylesheets/main.css">
-	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
+	<link href='//fonts.googleapis.com/css?family=Lato:100,300,400,100italic,300italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 			</div>
 			<div class="project-description">
 				<p>(under construction)</p>
-				<p>I am currently working with <a href="http://convergenceacademies.org/">Convergence Academies</a> to help integrate art and technology into the core curriculum of a high school in Chicago.  I work closely with teachers to help them plan, implement and teach new course material - e.g. physical game design in PE and robotics as a way to teach electricity in physics.</p>
+				<p>I am currently working with <a href="//convergenceacademies.org/">Convergence Academies</a> to help integrate art and technology into the core curriculum of a high school in Chicago.  I work closely with teachers to help them plan, implement and teach new course material - e.g. physical game design in PE and robotics as a way to teach electricity in physics.</p>
 			</div>			
 	</section>
 
@@ -39,9 +39,9 @@
 		<section class="social-media">
 			<ul>
 				<li><small>email:</small> <a href="mailto:mikewesthad@gmail.com">mikewesthad[at]gmail</a></li><!-- 
-				--><li><small>twitter:</small> <a href="http://twitter.com/mikewesthad">@mikewesthad</a></li><!--
-				--><li><small>github:</small> <a href="http://github.com/mikewesthad">mikewesthad</a></li><!--
-				--><li><small>linkedin:</small> <a href="http://www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
+				--><li><small>twitter:</small> <a href="//twitter.com/mikewesthad">@mikewesthad</a></li><!--
+				--><li><small>github:</small> <a href="//github.com/mikewesthad">mikewesthad</a></li><!--
+				--><li><small>linkedin:</small> <a href="//www.linkedin.com/in/michaelwesthadley">michael west hadley</a></li>
 			</ul>
 		</section>
 	</footer>
