Reorganize main nav to add data-urls for ajax (+style fix for underline)

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>MikeWestHad</title>
+    <title>mikewesthad</title>
 
     <link href="style.css" rel="stylesheet">
 
@@ -40,21 +40,23 @@
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
+          <ul id="main-nav" class="nav navbar-nav navbar-right">
             <li>
-              <a href="#">
+              <a data-url="html-pages/about.html" href="#">
                 About
                 <div class="nav-underline"></div>
               </a>
             </li>
-            <li class="active">
-              <a href="#">
-                <div class="nav-underline">Work</div>
+            <li>
+              <a data-url="html-pages/work.html" href="#">
+                Work
+                <div class="nav-underline"></div>
               </a>
             </li>
             <li>              
-              <a href="#">
-                <div class="nav-underline">Contact</div>
+              <a data-url="html-pages/contact.html" href="#">
+                Contact
+                <div class="nav-underline"></div>
               </a>
             </li>
           </ul>
